...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homepage.HomePageActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/students_view"
        android:layout_width="394dp"
        android:layout_height="401dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403" />

    <ToggleButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:textOff="@string/start_searching"
        android:textOn="@string/stop_searching"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mock_activity_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="onGoToMockStudents"
        android:text="@string/mock_students"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/students_view"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/sessions_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:onClick="onSessionsClicked"
        android:text="Sessions"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mock_activity_btn"
        app:layout_constraintVertical_bias="0.094" />

    <Spinner
        android:id="@+id/priority_spinner"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toEndOf="@+id/prioritize_text"
        app:layout_constraintTop_toTopOf="parent" />
...
