...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homepage.SessionDetailActivity">

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/history_view"
      android:layout_width="388dp"
      android:layout_height="496dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.478"
      app:layout_constraintStart_toStartOf="parent"
...
      android:layout_marginStart="24dp"
      android:layout_marginTop="14dp"
      app:layout_constraintStart_toEndOf="@+id/prioritize_text2"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/go_back_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="onGoBackHistoryClicked"
      android:text="Go Back"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
...
